# Telegram_bot_poetry_V2

./: .flake8  README.md  alembic.ini  docker-compose.yml  docker-entrypoint.sh  dockerfile.base  pyproject.toml
backend/: dockerfile  main.py
backend/api/: crud.py  endpoints.py  main.py  models.py  schemas.py
backend/api/db/: database.py
backend/api/routers/: users.py
backend/api/services/: parser_func.py  user_service.py
backend/api/tools/: parser_func.py  security.py
backend/api/utils/: parser_func.py  security.py
backend/core/: config.py
backend/crud/: __init__.py  favourite.py  order.py  poem.py  user.py
backend/db/: database.py
backend/migrations/: env.py
backend/models/: models.py
backend/schemas/: schemas.py
bot/: .flake8  dockerfile  main.py
bot/app/: exception.py  keyboards.py  middlewares.py
bot/app/config/: bot_config.py
bot/app/handlers/: handlers.py  pagination.py
bot/app/handlers/admin/: admin_handlers.py  admin_menu.py
bot/app/handlers/user_handlers/: create_poem.py  delete_poem.py
bot/app/states/: state.py
bot/app/utils/: api_helpers.py  commands.py
